--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "clearswitch/doraemon-ioc":"^0.0.1"
     },
     "autoload": {
-        "psr-4": {"ClearsWitch\\DataConversion\\": "src"}
+        "psr-4": {"ClearSwitch\\DataConversion\\": "src"}
     }
 }
